# pygidata

./: .gitignore  CHANGELOG.md  README.md  gen-loose-requirements.sh  gen-requirements.sh  gen-strict-requirements.sh  gi_data.ipynb  lint.sh  pyproject.toml  requirements.txt
.github/workflows/: compatibility_check.yml  publish.yml  pytest.yml  python-lint.yml
docs/: Usage.ipynb  conf.py  index.rst  installation.rst  overview.rst
gimodules/cloudconnect/: cloud_request.py  exceptions.py  gi_websocket.py
gimodules/gi_data/: README.md  dataclient.py
gimodules/gi_data/drivers/: base.py  cloud_gql.py  kafka_stream.py  local_http.py  ws_stream.py
gimodules/gi_data/infra/: auth.py  http.py  ws.py
gimodules/gi_data/mapping/: enums.py  models.py
gimodules/gi_data/utils/: logging.py
src/domain/: data_manipulator.py  domain.py
src/gi_data/: README.md  dataclient.py
src/gi_data/drivers/: base.py  cloud_gql.py  kafka_stream.py  local_http.py  ws_stream.py
src/gi_data/infra/: auth.py  http.py  ws.py
src/gi_data/mapping/: models.py
src/resources/csv/test/: SV_20191011_135100_20200608_130300_1hour_dotseperated.csv
src/visualization/: definedplots.py
tests/: test.py  test_buffer.py  test_websocket.py  ws_test.py
